--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,14 @@
             <artifactId>guava</artifactId>
             <version>15.0</version>
         </dependency>
-        
+        <!-- https://mvnrepository.com/artifact/dom4j/dom4j -->
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
